<resources>
    <string name="app_name">BonsaiCare</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_my_garden">My Garden</string>
    <string name="title_about_us">About Us</string>
    <string name="settings_headline">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us_hardiness_zone">Hardiness Zone</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="about_us_text">Hello, I am a Bonsai enthusiast and started developing interest in bonsai in around 2016. In 2020, I did a 3-month stay as a bonsai apprentice in a Tokyo-based bonsai garden. Currently I am enrolled in a bonsai class working towards graduation as an official bonsai artist in about 2028.</string>
    <string name="text_thank_you_for_using_our_app">Thank You for using our App!</string>
    <string name="text_app_version">App Version: %1$s</string>
    <string name="feedback_headline">Feedback</string>
    <string name="feedback_text">To constantly improve our App, feedback is always very much appreciated. If you have calendars to share that are not covered yet by the app (new tree species, hardiness zones, …), we are pleased to add them after reviewing.</string>
    <string name="feedback_button">Send Feedback</string>
    <string name="export_database">Export Database</string>
    <string name="support_headline">How to Support us</string>
    <string name="support_button">Donate</string>
    <string name="support_text">Support us by donations via paypal.</string>
    <string name="future_goals_headline">Future Goals</string>
    <string name="future_goals_text">
        We want improve the app and add features continuously. Donations helps us.\n\n
        Planned features are:\n
        • option to import/export calendars \n
        • detailed tree descriptions \n
        • additional languages
    </string>
    <string name="reset_settings">Reset Settings</string>
    <string name="title_hidden_fragment">Hidden Fragment</string>
    <string name="app_information_headline">App Information</string>
    <string name="app_version">app version: xx.xx</string>
    <string name="thank_you_for_using_our_app">Thank you for using our App!</string>
    <string name="title_tree_detail_card">Tree Details</string>
    <string name="default_string_placeholder">Default String</string>
    <string name="title_new_task">New Task</string>
    <string name="select_task_type">Select Task Type …</string>
    <string name="short_description_title_tree_detail_fragment"><u>Short Description</u>:</string>
    <string name="hardiness_zones_and_link">Hardiness Zones define geographical areas on the earth and their annual minimum temperature.\n\nIf you want to learn more about Hardiness Zones tap <a href="https://en.wikipedia.org/wiki/Hardiness_zone#/media/File:World_Hardiness_Zones.png">here</a>. </string>
    <string name="introduction_text"><![CDATA[
                <p align="left">
                BonsaiCare is your guide to keeping your bonsai trees healthy and thriving.
                Our app provides advice and tips on how to care for your bonsai, including information on watering, pruning, repotting, and more.
                </p>
                <p align="left">
                However, we want to remind you that proper care for your bonsai trees requires knowledge of the tree\'s variety, development stage, age, health, soil, and the season and hardiness zone in which the tree is located.
                </p>
                <p align="left">
                Our app will help you understand these factors and how to address them, but ultimately, it\'s important to remember that the key to creating beautiful bonsai is providing optimal conditions for the tree\'s health.
                </p>
                <p align="left">
                Always work towards providing optimal conditions as the basis of all prospective work.
                </p>
                </p>]]>
    </string>
    <string name="insert_my_tree_name">Tree Name (e.g. Larix Decidua #1)</string>
    <string name="insert_my_tree_style">Style</string>
    <string name="insert_date_of_birth">Date of Birth:</string>
    <string name="insert_date_of_acquisition">Date of Acquisition:</string>
    <string name="all_trees">All Trees</string>
    <string name="my_trees">My Trees</string>
    <string name="all">All</string>
    <string name="my_hardiness_zone">My Hardiness Zone</string>
    <string name="none">None</string>
    <string name="tree_species_title">Tree Species</string>
    <string name="hardiness_zones_title">Hardiness Zones</string>
    <string name="task">Task</string>
    <string name="jan">J</string>
    <string name="feb">F</string>
    <string name="mar">M</string>
    <string name="apr">A</string>
    <string name="may">M</string>
    <string name="jun">J</string>
    <string name="jul">J</string>
    <string name="aug">A</string>
    <string name="sep">S</string>
    <string name="oct">O</string>
    <string name="nov">N</string>
    <string name="dez">D</string>
    <string name="task_">Task</string>
    <string name="jan_">Jan</string>
    <string name="feb_">Feb</string>
    <string name="mar_">Mar</string>
    <string name="apr_">Apr</string>
    <string name="may_">May</string>
    <string name="jun_">Jun</string>
    <string name="jul_">Jul</string>
    <string name="aug_">Aug</string>
    <string name="sep_">Sep</string>
    <string name="oct_">Oct</string>
    <string name="nov_">Nov</string>
    <string name="dez_">Dec</string>
    <string name="repotting">Repotting</string>
    <string name="location">Location</string>
    <string name="pinching">Pinching</string>
    <string name="pruning">Pruning</string>
    <string name="wiring">Wiring</string>
    <string name="fertilizing">Fertilizing</string>
    <string name="watering">Watering</string>
    <string name="propagation">Propagation</string>
    <string name="diseases">Diseases</string>
    <string name="specifics">Specifics</string>
    <string name="repotting_description">
        Repotting is the task of not only potentially changing the container
        of the plant but also includes exchanging substrate and cutting roots.
        The tips of the roots (feeder roots) are the only parts of the root system that are able to collect nutrients and water.
        If there is no more space in the pot for the roots to grow, the amount of feeder roots shrinks over time.
        Therewith, the tree has less capacity to acquire vital recourses and gets weaker over time until it eventually dies.
        Therefore, we are reducing the size of the root ball to create space for new roots to grow.
        Strong roots should be removed in advantage of feeder roots being able to fill the space.\n\n
        General:\n
        • Use a drainage layer (substrate with increased grain size).\n
        • Fix your tree to the pot using wire. This stabilizes the tree and helps the tree to grow new roots.\n
        • Do not leave air pockets within the substrate.\n
        • Potentially cover parts of the substrate with moss to decrease risk of root ball drying out (it also helps to keep the substrate in place when watering).\n\n
        Substrate:\n
        The mixture of different substrate components depends on factors described in the 7-points
        (tree species, development stage, location, …). Recommendations on substrate mixtures are given within each care calendar in the
        \'Repotting\' task.\n\n
        The substrate mixture regulates\n
        • water drainage\n
        • water detention\n
        • air circulation.\n\n
        After repotting the care of the tree changes in the following ways.\n
        Location: The tree should be located half-shaded and protected from winds, cold, and continuous rain.\n
        Watering: According to the amount of roots that have been removed, the tree needs less water than usual due to the reduced number of feeder
        roots. Root rot is a potential problem when over watering. However, directly after repotting give water to wash out dust particles until clean water drains from the pot.\n
        Fertilization: Wait two to four weeks before starting fertilization.\n
        Pruning: The amount of foliage mass should be reduced accordingly to the amount of roots that have been removed (the roots cannot support all that foliage mass).</string>
    <string name="location_description">
        All trees need to be exposed to direct or indirect sun light in order to do photosynthesis and generate energy for staying vital.\n\n
        The location mainly focuses on\n
        • amount of sun light\n
        • temperature\n
        • winds\n
        the tree is exposed to. Cautions have to be taken for trees that are not hardy or need protection during the winter.
        After repotting, the tree should be located in a protected area (see \'Repotting\').</string>
    <string name="pinching_description">
        Pinching describes the task of removing the terminal growth before the third leaf is developed during the growing season.
        Maples can even be pinched before the first set of leaves is even fully developed.
        Pinching helps to keep the tree in shape, reduce growth of girth and is especially important for trees in the refinement stage (S3).
        This task can be undertaken with tweezers.
    </string>
    <string name="pruning_description">
        Pruning is the task of cutting branches off of the tree.
        It helps to define the style of the tree, shape the tree
        (directional pruning) and to keep the tree in its general shape.
        Directional pruning can be exploited if one pays attention to the bud that is cut back to.
        The branch will continue its growth from the point of that bud and in the direction the bud is facing.
        Small branches can often be cut throughout the year.
        Strong branches need to be removed more carefully and wounds should be sealed to reduce the risk of infections and loss of water.
        Branches of trees in their developmental stage (S1, S2) can be grown longer before being cut back,
        trees in refinement stage (S3) should be cut earlier or be pinched (see \'Pinching\').</string>
    <string name="star_legend">* obligatory</string>
    <string name="task_type">Task Type:</string>
    <string name="tree_species">Tree Species:</string>
    <string name="hardiness_zone">Hardiness Zone:</string>
    <string name="list_of_dates_hint">* Months, e.g.: 2,5</string>
    <string name="list_of_labels_hint">Labels, e.g.: +,++,++,+</string>
    <string name="long_description_hint">* Long task description …</string>
    <string name="short_description_hint">Short task description …</string>
    <string name="select_tree_species">Select tree species …</string>
    <string name="select_tree_species_latin">Select tree species (latin) …</string>
</resources>